--- a/Burberry.html
+++ b/Burberry.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="introduce.html">Introduce</a></li>
+            <li><a href="index.html">Introduce</a></li>
             <li><a href="Before Bottega.html">Before Bottega</a></li>
             <li><a href="Bottega.html">Bottega</a></li>
             <li><a href="Burberry.html">Burberry</a></li>
