--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>introduce</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/qwx6jnz.css">
-    <link rel="shortcut icon" href="Danial.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://chorroc.github.io/Daniel/Danial.png" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta property="og:title" content="Danial" /> 
