--- a/Before Bottega.html
+++ b/Before Bottega.html
@@ -6,10 +6,10 @@
     <title>Before Botega</title>
     <link rel="stylesheet" href= "before Bottega.css">
     <link rel="stylesheet" href="https://use.typekit.net/qwx6jnz.css">
-    <link rel="shortcut icon" href="Danial.png\" type="image/x-icon">
+    <link rel="shortcut icon" href="https://chorroc.github.io/Daniel/Danial.png" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <meta property="og:title" content="Danial" /> 
+<meta property="og:title" content="Danial" /> 
 <meta property="og:url" content="https://chorroc.github.io/Daniel/" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://chorroc.github.io/Daniel/dani1.png" /> 
