--- a/Interview.html
+++ b/Interview.html
@@ -6,7 +6,7 @@
     <title>Interview</title>
     <link rel="stylesheet" href="interview.css">
     <link rel="stylesheet" href="https://use.typekit.net/qwx6jnz.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://chorroc.github.io/Daniel/Danial.png" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
